# dat-vs-rag

./: .gitignore  README.md  params.yaml  pyproject.toml
SQL_DB/: __init__.py  users.py
dat_vs_rag/SQL_DB/: __init__.py  connect.py  users.py
dat_vs_rag/chroma_db/: BM25.py  ModernBert.py  __init__.py  create_chunks.py  init_chroma_db.py  making_NQjsonl.py
dat_vs_rag/response_generate/: DAT.py  __init__.py  generation.py  qr_process.py  ru_stop_voc.yaml
dat_vs_rag/response_generate/agents/: DAT.py  DAT_SLM.py  RAG.py  RAG_LLM.py  __init__.py  models.py
dat_vs_rag/telegram_bot/: config.py  handlers.py  keyboards.py  run_bot.py
dat_vs_rag/utils/: load_params.py
response_generate/: __init__.py
telegram_bot/: __init__.py  config.py  handlers.py  run_bot.py
