[project]
name = "dat-vs-rag"
version = "1.0.0"
description = "Сравнительный анализ классического RAG и динамически адаптивного retrieval-подхода (DAT) на базе малых языковых моделей"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "apache 2.0"}
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.26.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
